[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Images/WallPapers/Screenshot_7.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Icons/Vindous.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Icons/Vindous_Pressed.png" type="Texture" id=3]
[ext_resource path="res://scripts/Desktop/Desktop.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/Icons/WallPaper.png" type="Texture" id=5]
[ext_resource path="res://scripts/Desktop/Menu.gd" type="Script" id=6]
[ext_resource path="res://Assets/Images/Icons/off.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sounds/Windows XP Logon Sound.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Fonts/arial.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/Images/Icons/confirm.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/Icons/cancel.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/Icons/pencil.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 9 )

[node name="Desktop" type="Node"]
script = ExtResource( 4 )

[node name="WallPaper" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HotBar" type="ColorRect" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
color = Color( 0.188235, 0.188235, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="ColorRect" parent="CanvasLayer/HotBar"]
visible = false
margin_top = -376.0
margin_right = 256.0
margin_bottom = 32.0
color = Color( 0.12549, 0.12549, 0.12549, 0.784314 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/HotBar/Menu"]
anchor_bottom = 1.0
margin_right = 64.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HotBar/Menu"]
margin_left = 16.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG_b" type="TextureButton" parent="CanvasLayer/HotBar/Menu/VBoxContainer" groups=[
"MenuButtons",
]]
margin_right = 32.0
margin_bottom = 32.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HotBar/Menu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 72.0
margin_top = -56.0
margin_right = -8.0
margin_bottom = -40.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desligar" type="TextureButton" parent="CanvasLayer/HotBar/Menu/HBoxContainer" groups=[
"MenuButtons",
]]
margin_left = 160.0
margin_right = 176.0
margin_bottom = 16.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )

[node name="Vindows" type="TextureButton" parent="CanvasLayer/HotBar" groups=[
"DeskButtons",
]]
margin_left = 12.0
margin_top = -12.0
margin_right = 52.0
margin_bottom = 28.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TOM" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -76.0
margin_right = 128.0
margin_bottom = 52.0
color = Color( 0, 0, 0, 0.733333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/TOM"]
anchor_right = 1.0
margin_bottom = 32.0
color = Color( 0, 0, 0, 0.733333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/TOM"]
anchor_right = 1.0
margin_right = -2.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "wanna turn off the PC?"
align = 1

[node name="TurnOff" type="TextureButton" parent="CanvasLayer/TOM" groups=[
"DeskButtons",
]]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -60.0
margin_right = 40.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="TextureButton" parent="CanvasLayer/TOM" groups=[
"DeskButtons",
]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -60.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="Apps" type="Node" parent="."]

[node name="PaintButton" type="TextureButton" parent="Apps" groups=[
"DeskButtons",
]]
margin_left = 112.0
margin_top = 144.0
margin_right = 144.0
margin_bottom = 176.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Apps/PaintButton"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = 24.0
text = "Paint"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Windows" type="Node" parent="."]

[node name="ViewportContainer" type="ViewportContainer" parent="Windows"]
visible = false
margin_right = 1024.0
margin_bottom = 568.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Windows/ViewportContainer"]
size = Vector2( 1024, 568 )
handle_input_locally = false
render_target_update_mode = 0

[node name="DoubleClickTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="DoubleClickTimer" to="." method="_on_DoubleClickTimer_timeout"]
